cleanup + add ed25519 support
