# go/model_jwk_public_key.go
@@ -3,7 +3,7 @@
  *
  * Endpoint for OpenID Connect's ID Assertion Token endpoint for userinfo.
  *
- * API version: 0.2.0
+ * API version: 0.4.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package iat
@@ -17,6 +17,7 @@ import (
 type JwkPublicKey struct {
 	JwkEcPublicKey
 	JwkRsaPublicKey
+	JwkEdPublicKey
 }
 
 func PublicJwkFromJson(json map[string]interface{}, alg jwt.SigningMethod) (JwkPublicKey, error) {
@@ -43,6 +44,12 @@ func PublicJwkFromJson(json map[string]interface{}, alg jwt.SigningMethod) (JwkP
 			return JwkPublicKey{}, errors.New("failed to read RSA public key: " + err.Error())
 		}
 		return JwkPublicKey{JwkRsaPublicKey: rsaJwk}, nil
+	case jwt.SigningMethodEdDSA:
+		edDsaJwk, err := EdJwkFromJson(json)
+		if err != nil {
+			return JwkPublicKey{}, errors.New("failed to read Eduard curve public key: " + err.Error())
+		}
+		return JwkPublicKey{JwkEdPublicKey: edDsaJwk}, nil
 	// Not supported:
 	default:
 		return JwkPublicKey{}, errors.New("signing algorithm '" + alg.Alg() + "' not supported")
